--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgx5GWpu9y2AgF7BJtET2R99pNRMM341k"></script>
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
   <script src="build/vendor.js"></script>
