Image upload 60% done

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -29,4 +29,6 @@
   <ion-datetime displayFormat="h:mm a" [(ngModel)]="Date"></ion-datetime>
 </ion-item>
 {{Date}}
+{{imageData}}
+<button ion-button full color="primary" (click)="UploadImage()">Upload Image</button>
 </ion-content>
