--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Dashboard
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -40,7 +41,7 @@
     <ion-col>
       <button ion-button color="danger" icon-start clear large disabled="true">
         <ion-icon name="close"></ion-icon>
-        <div>12</div>
+        <div>3</div>
       </button>
     </ion-col>
   </ion-row>
