--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-	<ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="person"></ion-tab>
-	<ion-tab [root]="tab2Root" tabTitle="Map" tabIcon="camera"></ion-tab>
- 	<ion-tab [root]="tab3Root" tabTitle="Feedback" tabIcon="map"></ion-tab>
+	<ion-tab [root]="tab1Root" tabTitle="Dashboard" tabIcon="apps"></ion-tab>
+	<ion-tab [root]="tab2Root" tabTitle="Feedback" tabIcon="camera"></ion-tab>
+ 	<ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
 </ion-tabs>
